--- a/templates/base.html
+++ b/templates/base.html
@@ -36,16 +36,22 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'articles' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'classes' %}">Home</a>
+                    </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Logout</a>
+                        <a class="nav-link" href="{% account_logout %}">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
+                        <a class="nav-link" href="{% account_signup %}">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="{% account_login %}">Login</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -55,6 +61,21 @@
             </div>
         </div>
     </nav>
+
+    <!-- Pop up allert messages -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                    {{ message | safe }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
 
     <main class="flex-shrink-0 main-bg">
         {% block content %}
@@ -69,6 +90,15 @@
             <i class="fa-brands fa-github"><a href="https://github.com/van-essa" target="_blank" title="Eric"></a></i>
             <i class="fab fa-linkedin-in"><a href="https://www.linkedin.com/in/vanessaannamariaandersson/" target="_blank" title="My_LinkedIn"></a></i>
     </footer>
+
+    <!-- Timer showing the allert messages -->
+    <script>
+        setTimeout(function () {
+            let messages = document.getElementById('msg');
+            let alert = new bootstrap.Alert(messages);
+            alert.close();
+        }, 3000);
+    </script>
 </body>
 
 </html>
