Worked on views for bookings and made some changes on the models file ofr the booking app

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html class="h-100">
 
 <head>
-    <title>CodeStar Blog</title>
+    <title>LadyBike</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- Google Fonts -->
