--- a/templates/articles.html
+++ b/templates/articles.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
     <div class="row">
 
-        <!-- Blog Entries Column -->
+        <!-- Articles Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
                 {% for post in post_list %}
