--- a/templates/manage_booking.html
+++ b/templates/manage_booking.html
@@ -25,7 +25,7 @@
                         <li class="booking-item">
                             <h5>Booking ID: {{ booking.booking_id }} </h5>
                         </li>
-                        <li class="booking-item">Time: {{ booking.class_name }} </li>
+                        <li class="booking-item">Class: {{ booking.class_name }} </li>
                         <li class="booking-item">Time: {{ booking.requested_time }} </li>
                         <li class="booking-item">Date: <span class="booking-date"
                                 id="{{ booking.requested_date }}">{{ booking.requested_date|date:"d/m/Y"}}</span>
