--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #d60675">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Lady<span class="pink-lady"><span
+            <a class="navbar-brand" href="{% url 'index' %}"><span class="brand">Lady<span class="pink-lady"><span
                         class="thin">|Bike</span></span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,30 +53,35 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'articles' %}">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'classes' %}">Classes</a>
+                        <a class="nav-link active" aria-current="page" href="/classes">Classes</a>
                     </li>
                     <ul class="navbar-nav">
-                    {% if user.is_authenticated %}
-                    <!-- Display manage bookings and logout option if user is logged in -->
-                    <li class="nav-item">
+                        {% if user.is_authenticated %}
+                        <!-- Display manage reservations, edit customer details & logout option if user is logged in -->
+
+                        <li class="nav-item fuxia-bground ml-auto">
                         <a class="nav-link {% if request.resolver_match.url_name == 'manage_booking' %}
                         black-text {% else %} text-white {% endif %}" href="{% url 'manage_booking' %}">Manage
                             Bookings</a>
-                    </li>
-                    <li class="nav-item">
+                        </li>
+                        
+                        <li class="nav-item fuxia-bground ml-auto">
                         <a class="nav-link {% if request.resolver_match.url_name == 'account_logout' %}
-                        black-text {% else %} text-white {% endif %}" href="{% account_logout %}">Logout</a>
-                    </li>
-                    <!-- If user is not logged in display Register & Login -->
-                    {% else %}
-                    <li class="nav-item">
+                        black-text {% else %} text-white {% endif %}" href="{% url 'account_logout' %}">Logout</a>
+                        </li>
+
+                        <!-- If user is not logged in display Register & Login -->
+                        {% else %}
+
+                        <li class="nav-item fuxia-bground ml-auto">
                         <a class="nav-link {% if request.resolver_match.url_name == 'account_signup' %}
-                        black-text {% else %} text-white {% endif %}" href="{% account_signup %}">Register</a>
-                    </li>
-                    <li class="nav-item">
+                        black-text {% else %} text-white {% endif %}" href="{% url 'account_signup' %}">Register</a>
+                        </li>
+                        
+                        <li class="nav-item fuxia-bground ml-auto">
                         <a class="nav-link {% if request.resolver_match.url_name == 'account_login' %}
-                        black-text {% else %} text-white {% endif %}" href="{% account_login %}">Login</a>
-                    </li>
+                        black-text {% else %} text-white {% endif %}" href="{% url 'account_login' %}">Login</a>
+                        </li>
                     {% endif %}
                 </ul>
             </div>
