--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,6 +128,79 @@ body {
     text-decoration: underline;
 }
 
+body {
+    font-weight: 400;
+    line-height: 1.6;
+}
+
+/* Image dispay on the header*/
+
+.mask {
+    position: absolute;
+    background-size: cover;
+    background-position: center center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+}
+
+
+.bg-gradient-dark {
+    background-image: linear-gradient(195deg, #42424a 0%, #191919 100%);
+}
+
+.opacity-6 {
+    opacity: 0.6 !important;
+}
+/* Text dispay on the header image */
+
+.text-center {
+    text-align: center !important;
+}
+
+.my-auto {
+    margin-top: auto !important;
+    margin-bottom: auto !important;
+}
+
+.mx-auto {
+    margin-right: auto !important;
+    margin-left: auto !important;
+}
+
+.row > * {
+    flex-shrink: 0;
+    width: 100%;
+    max-width: 100%;
+    padding-right: calc(var(--bs-gutter-x) * .5);
+    padding-left: calc(var(--bs-gutter-x) * .5);
+    margin-top: var(--bs-gutter-y);
+}
+
+*::before, *::after {
+    box-sizing: border-box;
+}
+
+@media (min-width: 992px)
+.col-lg-8 {
+    flex: 0 0 auto;
+    width: 66.66667%;
+}
+
+/* Nav bar display if user logged in or not */
+
+.back-text {
+    color: #0000 !important;
+    background-color: white;
+}
+
+.fuxia-bground {
+    background-color: #d606ba;
+    color: white;
+}
+
 
 /* Like Button Articles */
 .btn-like {
