--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box; }
+
 body {
     background-color: #F9FAFC;
 }
@@ -133,6 +138,30 @@ body {
     line-height: 1.6;
 }
 
+/* Page header display*/
+
+.min-vh-75 {
+    min-height: 75vh !important;
+}
+
+.page-header {
+    padding: 0;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    background-size: cover;
+    background-position: 50%;
+}
+
+.container, .container-fluid, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
+    width: 100%;
+    padding-right: var(--bs-gutter-x, 1.5rem);
+    padding-left: var(--bs-gutter-x, 1.5rem);
+    margin-right: auto;
+    margin-left: auto;
+}
+
 /* Image dispay on the header*/
 
 .mask {
@@ -142,7 +171,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 500%;
     opacity: 0.8;
 }
 
@@ -187,6 +216,111 @@ body {
 .col-lg-8 {
     flex: 0 0 auto;
     width: 66.66667%;
+}
+
+/* Info displayed on the home page */
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.75rem;
+}
+
+.py-7 {
+    padding-top: 6rem !important;
+    padding-bottom: 6rem !important;
+}
+
+.text-start {
+    text-align: left !important;
+}
+
+.mb-5 {
+    margin-bottom: 3rem !important;
+}
+
+.mt-5 {
+    margin-top: 3rem !important;
+}
+
+.align-items-center {
+    align-items: center !important;
+}
+
+@media (min-width: 992px)
+.col-lg-6 {
+    flex: 0 0 auto;
+    width: 50%;
+}
+
+@media (min-width: 992px)
+.mt-lg-0 {
+    margin-top: 0 !important;
+}
+
+.ms-auto {
+    margin-left: auto !important;
+}
+
+.align-items-center {
+    align-items: center !important;
+}
+
+.bg-gradient-dark {
+    background-image: linear-gradient(195deg, #d606ba 0%, #d606ba 100%);
+}
+
+.pb-5 {
+    padding-bottom: 3rem !important;
+}
+
+.mx-n3 {
+    margin-right: -1rem !important;
+    margin-left: -1rem !important;
+}
+
+.position-relative {
+    position: relative !important;
+}
+
+.text-start {
+    text-align: left !important;
+}
+
+.text-white {
+    color: #fff !important;
+}
+
+.mb-0 {
+    margin-bottom: 0 !important;
+}
+
+.card {
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -1px rgb(0 0 0 / 6%);
+}
+
+.border-radius-md {
+    border-radius: 0.375rem;
+}
+
+.w-100 {
+    width: 100% !important;
+}
+
+
+@media (min-width: 768px)
+.col-md-6 {
+    flex: 0 0 auto;
+    width: 50%;
+}
+
+.justify-content-start {
+    justify-content: flex-start !important;
 }
 
 /* Nav bar display if user logged in or not */
