--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,31 @@
 {% extends "base.html" %}
 
+{% block title %} Home Page {% endblock %} 
+
+{% block body_class %} home-page {% endblock %}
+
+<!-- Specific Page CSS goes HERE  -->
+{% block stylesheets %}{% endblock stylesheets %}
+
 {% block content %}
 
-{% load static %}
+{% load static %} 
 
 <header class="bg-gradient-dark">
-    <div class="page-header min-vh-75">
-        <img  class="bg-img" src="{% static 'images/header.jpg' %}" alt="biking_class">
-      <span class="mask bg-gradient-dark opacity-6"></span>
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-8 text-center mx-auto my-auto">
-            <h1 class="text-white">Welcome to Ladybike</h1>
-            <p class="lead mb-4 text-white opacity-8">We’re passionate female cycling professionals who wants to make cycling tarining a fun experince for othetr feamles!
-                Book a session today and we'll make sure you have a great sweaty experince! </p>
-            <button type="submit" class="btn bg-white text-dark">Book Now!</button>
-          </div>
+  <div class="page-header min-vh-75 bg-gradient-dark opacity-6" style="height: 500px; background-image: url('https://stagescycling.com/media/.renditions/wysiwyg/stages-cycling/landing-pages/home/2021/commercial_indoor_cycles-smiling-700px_by_500px.jpg')">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8 text-center mx-auto my-auto">
+          <h1 class="text-white">Welcome to Ladybike</h1>
+          <p class="lead mb-4 text-white opacity-8">We’re passionate female cycling professionals who wants to make cycling training a fun experience for other females!</p>
+          <p>Book a session today and we'll make sure you have a great sweaty experience!</p>
+          <button type="submit" class="btn bg-white text-dark">Book Now!</button>
         </div>
       </div>
     </div>
-  </header>
+  </div>
+</header>
+
 
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
     <!-- Section with four info areas left & one card right with image and waves -->
@@ -64,7 +70,7 @@
               <div class="card">
                 <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                   <a class="d-block blur-shadow-image">
-                    <img src="https://live-production.wcms.abc-cdn.net.au/c1f744c896b00416989a7b3530350d9a?impolicy=wcms_crop_resize&cropH=577&cropW=866&xPos=2&yPos=37&width=862&height=575" alt="img-girls-biking" class="img-fluid border-radius-lg">
+                    <img src="{% static 'images/cyckling.png' %}" alt="img-girls-biking" class="img-fluid border-radius-lg">
                   </a>
                 </div>
                 <div class="card-body text-center">
@@ -99,7 +105,7 @@
                 <div class="row">
                   <div class="col-lg-4 col-md-6 col-12 mt-n5">
                       <div class="p-3 pe-md-0">
-                        <img class="w-100 border-radius-md shadow-lg" src="{% static 'images/emma.jpg' %}" alt="image">
+                        <img class="w-100 border-radius-md shadow-lg" src="{% static 'images/Emma.png' %}" alt="image">
                       </div>
                     </a>
                   </div>
@@ -119,7 +125,7 @@
                   <div class="col-lg-4 col-md-6 col-12 mt-n5">
                     <a href="javascript:;">
                       <div class="p-3 pe-md-0">
-                        <img class="w-100 border-radius-md shadow-lg" src="{% static 'images/vaness.png' %}" alt="image">
+                        <img class="w-100 border-radius-md shadow-lg" src="{% static 'images/Vanessa.png' %}" alt="image">
                       </div>
                     </a>
                   </div>
