--- a/static/css/style.css
+++ b/static/css/style.css
@@ -248,6 +248,14 @@ body {
     margin-top: 3rem !important;
 }
 
+.mt-4 {
+    margin-top: 1.5rem !important;
+}
+
+.ms-auto {
+    margin-left: auto !important;
+}
+
 .align-items-center {
     align-items: center !important;
 }
@@ -256,6 +264,12 @@ body {
 .col-lg-6 {
     flex: 0 0 auto;
     width: 50%;
+}
+
+@media (min-width: 992px)
+.col-lg-4 {
+    flex: 0 0 auto;
+    width: 33.33333%;
 }
 
 @media (min-width: 992px)
@@ -272,7 +286,7 @@ body {
 }
 
 .bg-gradient-dark {
-    background-image: linear-gradient(195deg, #d606ba 0%, #d606ba 100%);
+    background-image: linear-gradient(195deg, #d606ba 0%, #42424a 100%);
 }
 
 .pb-5 {
@@ -321,6 +335,16 @@ body {
 
 .justify-content-start {
     justify-content: flex-start !important;
+}
+
+.row {
+    /* --bs-gutter-x: 1.5rem; */
+    /* --bs-gutter-y: 0; */
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(var(--bs-gutter-y) * -1);
+    margin-right: calc(var(--bs-gutter-x) * -.5);
+    margin-left: calc(var(--bs-gutter-x) * -.5);
 }
 
 /* Nav bar display if user logged in or not */
