Fixing the pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,48 +30,54 @@
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
     <!-- Section with four info areas left & one card right with image and waves -->
     <section class="py-7">
+      <div class="container" style="margin-top:50px">
+          <div class="row gy-5">
+          </div>
+          <div class="d-flex flex-row bd-highlight mb-3 justify-content-center">
+  
+  
+              <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
+                  data-aos="fade-up">
+                  <div class="icon-box">
+                      <div class="icon"><img src="{% static 'images/Strong_girl.png' %}" alt="Strong_girl">
+                      </div>
+                      <h5 class="title">Become Stronger</h5>
+                      <p>LadyBike encourages you to get a better cyclist week by week! You progress gradually, increasing the
+                        intensity in each workout.</p>
+                  </div>
+              </div>
+           
+  
+              <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
+                  data-aos="fade-up" data-aos-delay="100">
+                  <div class="icon-box">
+                      <div class="icon"><img src="{% static 'images/Community.png' %}" alt="Community">
+                      </div>
+                      <h5 class="title">Join Our Community</h5>
+                      <p>LadyBike has a great community of women interested in Cycling. Connect with like-minded people and 
+                        share your experiences and aspirations!</p>
+                  </div>
+              </div>
+  
+  
+              <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
+                  data-aos="fade-up" data-aos-delay="200">
+                  <div class="icon-box">
+                      <div class="icon"><img src="{% static 'images/Cyclist.png' %}"  alt="Cyclist">
+                      </div>
+                      <h5 class="title">Only For Women</h5>
+                      <p>LadyBike offers three cycling indoor workouts ONLY for women! LadyBike is a place for women who are focused on their health and fitness and 
+                        want to become better cyclists.</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-lg-6">
-              <div class="row justify-content-start">
-                <div class="col-md-6">
-                  <div class="info">
-                    <i class="material-icons text-3xl text-gradient text-info mb-3">public</i>
-                    <h5>Fully integrated</h5>
-                    <p>We get insulted by others, lose trust for those We get back freezes</p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="info">
-                    <i class="fa-solid fa-person-biking text-3xl text-gradient text-info mb-3">Bike></i>
-                    <h5>Three Classes</h5>
-                    <p>We offer three differnet biking classes. Each bike session lasts one hour.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="row justify-content-start mt-4">
-                <div class="col-md-6">
-                  <div class="info">
-                    <i class="fa-solid fa-hands-holding-heart text-3xl text-gradient text-info mb-3">Holding heart</i>
-                    <h5>We Are Together</h5>
-                    <p>Everyone has her own level, and that is totally fine! You are welcome to join all classes. We are doing this together!</p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="info">
-                    <i class="fa-solid fa-user-hair-long text-3xl text-gradient text-info mb-3">Woman</i>
-                    <h5>Only For Women</h5>
-                    <p>Our classes are only for women. We want connnect women interested in cycling. What better meeting them is a bike session?</p>
-                  </div>
-                </div>
-              </div>
-            </div>
             <div class="col-lg-4 ms-auto mt-lg-0 mt-4">
               <div class="card">
                 <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-                  <a class="d-block blur-shadow-image">
-                    <img src="{% static 'images/cyckling.png' %}" alt="img-girls-biking" class="img-fluid border-radius-lg">
-                  </a>
                 </div>
                 <div class="card-body text-center">
                   <h5 class="font-weight-normal">
@@ -88,6 +94,8 @@
           </div>
         </div>
       </section>
+        
+
 
 <!-- END Section with four info areas left & one card right with image and waves -->
     <!-- -------- START Feature with pattern background  -------- -->
