--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
           <div class="d-flex flex-row bd-highlight mb-3 justify-content-center">
   
   
-              <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
-                  data-aos="fade-up">
+              <div class="col-md-6 col-lg-3 px-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
+              style="text-align:center" data-aos="fade-up">
                   <div class="icon-box">
                       <div class="icon"><img src="{% static 'images/Strong_girl.png' %}" alt="Strong_girl">
                       </div>
@@ -48,8 +48,8 @@
               </div>
            
   
-              <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
-                  data-aos="fade-up" data-aos-delay="100">
+              <div class="col-md-6 col-lg-3 px-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
+              style="text-align:center" data-aos="fade-up" data-aos-delay="100">
                   <div class="icon-box">
                       <div class="icon"><img src="{% static 'images/Community.png' %}" alt="Community">
                       </div>
@@ -60,8 +60,8 @@
               </div>
   
   
-              <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
-                  data-aos="fade-up" data-aos-delay="200">
+              <div class="col-md-6 col-lg-3 px-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
+              style="text-align:center" data-aos="fade-up" data-aos-delay="200">
                   <div class="icon-box">
                       <div class="icon"><img src="{% static 'images/Cyclist.png' %}"  alt="Cyclist">
                       </div>
@@ -94,63 +94,60 @@
           </div>
         </div>
       </section>
-        
 
+
+      
 
 <!-- END Section with four info areas left & one card right with image and waves -->
     <!-- -------- START Feature with pattern background  -------- -->
     <section class="pb-5 position-relative bg-gradient-dark mx-n3">
+      
         <div class="container">
-          <div class="row">
-            <div class="col-md-8 text-start mb-5 mt-5">
-              <h3 class="text-white z-index-1 position-relative">Meat The Team</h3>
-              <p class="text-white opacity-8 mb-0">“Embrace your sweat. It is your essence and your emancipation.” — Kristin Armstrong, American cyclist</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 col-12">
-              <div class="card card-profile mt-4">
-                <div class="row">
-                  <div class="col-lg-4 col-md-6 col-12 mt-n5">
-                      <div class="p-3 pe-md-0">
-                        <img class="w-100 border-radius-md shadow-lg" src="{% static 'images/Emma.png' %}" alt="image">
-                      </div>
-                    </a>
-                  </div>
-                  <div class="col-lg-8 col-md-6 col-12 my-auto">
-                    <div class="card-body ps-lg-0">
-                      <h5 class="mb-0">Emma Roberts</h5>
-                      <h6 class="text-info">Proffesional Cyclist</h6>
-                      <p class="mb-0">I love biking! I would love to share my passion with you! Joing me on the Spinning and Ladybike classes.</p>
+          <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
+              <div class="card border-0 shadow-lg pt-5 my-5 position-relative">
+                <div class="card-body p-4">
+                  <div class="member-profile position-absolute top-0 start-50 translate-middle w-100 text-center">
+                      <img class="rounded-circle mx-auto d-inline-block shadow-sm" src="{% static 'images/Vanessa.png' %}" alt="vanessa">
                     </div>
+                  <div class="card-text pt-1">
+                    <h5 class="member-name mb-0 text-center font-weight-bold" style="color:#d606ba;">Vanessa Karra</h5>
+                    <div class="mb-3 text-center">Co-founder / Personal Trainer</div>
+                    <div>I’m Vanessa, personal trainer and co-founder of LadyBike. I gained my qualifications in 
+                      2008 and started my career as a personal and cycling trainer for women. My goal has always been to 
+                      empower women by giving them the practical tools they need to improve their health, cycling skills and 
+                      fitness and feel more confident. You can find me on the LadyBike classes!</div>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 col-12">
-              <div class="card card-profile mt-lg-4 mt-5">
-                <div class="row">
-                  <div class="col-lg-4 col-md-6 col-12 mt-n5">
-                    <a href="javascript:;">
-                      <div class="p-3 pe-md-0">
-                        <img class="w-100 border-radius-md shadow-lg" src="{% static 'images/Vanessa.png' %}" alt="image">
-                      </div>
-                    </a>
-                  </div>
-                  <div class="col-lg-8 col-md-6 col-12 my-auto">
-                    <div class="card-body ps-lg-0">
-                      <h5 class="mb-0">Vanessa Andersson</h5>
-                      <h6 class="text-info">Thriathete</h6>
-                      <p class="mb-0">Let's build strong legs! Join me at Ride that hill session!</p>
+                </div><!--//card-body-->
+                <div class="card-footer theme-bg-primary border-0 text-center">
+                </div><!--//card-footer-->
+              </div><!--//card-->
+            </div><!--//col-->
+            
+            <div class="col-12 col-md-6">
+              <div class="card border-0 shadow-lg pt-5 my-5 position-relative">
+                <div class="card-body p-4">
+                  <div class="member-profile position-absolute top-0 start-50 translate-middle w-100 text-center">
+                      <img class="rounded-circle mx-auto d-inline-block shadow-sm" src="{% static 'images/Emma.png' %}" alt="Emma">
                     </div>
+                  <div class="card-text pt-1">
+                    <h5 class="member-name mb-0 text-center font-weight-bold" style="color:#d606ba;">Emma Thomas</h5>
+                    <div class="mb-3 text-center">Olympic Cyclist / Personal Trainer</div>
+                    <div>Hello! I’m Emma — wife, mother and an Olympic Cyclist. 
+                      After having my baby, Alexandra, I decided that I need to take a break from competiitons and  
+                      focus more on sharing my experince and passion about cycling and helathy lifestyle with other women. 
+                      You can find me on the Ride that hill and Spinning classes! </div>
                   </div>
-                </div>
-              </div>
-            </div>
+                </div><!--//card-body-->
+                <div class="card-footer theme-bg-primary border-0 text-center">
+                </div><!--//card-footer-->
+              </div><!--//card-->
+            </div><!--//col-->
           </div>
         </div>
-        </section>
+      </section>
   </div>
+
 
 {%endblock%}
 
